feat(Core): Adding the option to forward robot's events (notifications) to an external app
Designed for PushOver
